...
    let firstName = appState.getUserInfo('firstName');
    let lastName = appState.getUserInfo('lastName');
    let loading = firstName === '[loading]' || lastName === '[loading]';

    if (loading) {
      // Use dummy data instead of showing "Loading..."
      return "John Doe";
    } else {
      return `${firstName} ${lastName}`;
    }
  }

  let getUserEmail = () => {
...
